[Comments] Fix avatar placeholder font size on mobile
Also cleaned up the thumbnail component CSS a little.

--- a/app/javascript/src/styles/components/post_thumbnail_component.scss
+++ b/app/javascript/src/styles/components/post_thumbnail_component.scss
@@ -85,22 +85,22 @@ article.thumbnail {
         width: auto;
         height: unset;
         object-fit: cover;
-        max-width: var(--thumb-image-size, 150px);
-        max-height: var(--thumb-image-size, 150px);
+        max-width: $image-size;
+        max-height: $image-size;
         min-width: 100px;
         min-height: 100px;
       }
     }
     &.blacklisted a.thm-link::before,
     &.deleted a.thm-link::before {
-      font-size: calc(var(--thumb-image-size, 150px) / 10);
+      font-size: calc($image-size / 10);
     }
 
     div.thm-desc { display: none; }
 
     &.deleted {
       a.thm-link {
-        width: var(--thumb-image-size, 150px);
+        width: $image-size;
         aspect-ratio: 1;
       }
     }
@@ -254,8 +254,8 @@ article.thumbnail .thm-extra {
 
 
 article.thumbnail.placeholder {
-  min-width: var(--thumb-image-size, 150px);
-  height: var(--thumb-image-size, 150px);
+  min-width: $image-size;
+  height: $image-size;
   background: #dddddd10;
   border-bottom: 1.25rem solid #00000040;
   @include st-radius;
@@ -272,7 +272,7 @@ article.thumbnail.placeholder {
     justify-content: center;
     align-items: center;
 
-    font-size: 5rem;
+    font-size: calc(0.75 * $image-size);
     font-weight: bold;
     color: themed("color-foreground");
     font-family: "Roboto", Verdana, Geneva, sans-serif;
@@ -350,7 +350,7 @@ article.thumbnail.avatar {
         justify-content: center;
         align-items: center;
 
-        font-size: 5rem;
+        font-size: calc(0.75 * $image-size);
         font-weight: bold;
         color: themed("color-foreground");
 
